20230224 added Working with JSON data

--- a/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
@@ -38,6 +38,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with JSON data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://earthquake.usgs.gov/earthquakes/feed/\n",
+    "# https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result code : 200\n",
+      "The Title : USGS Magnitude 2.5+ Earthquakes, Past Day\n",
+      "36 event recorded\n",
+      "52 km NNW of Sandy Ground Village, Anguilla\n",
+      "3 km SW of Indios, Puerto Rico\n",
+      "39 km ESE of Port Heiden, Alaska\n",
+      "64 km NE of Calama, Chile\n",
+      "Turkey-Syria border region\n",
+      "163 km WNW of Panguna, Papua New Guinea\n",
+      "18 km S of Weston, Colorado\n",
+      "23 km SSE of Pihuamo, Mexico\n",
+      "29 km ENE of Kandrian, Papua New Guinea\n",
+      "80 km SW of Atocha, Bolivia\n",
+      "235 km SSE of Old Harbor, Alaska\n",
+      "10 km SE of Otra Banda, Dominican Republic\n",
+      "50 km S of Guantánamo, Cuba\n",
+      "Pakistan\n",
+      "70 km NW of La Ligua, Chile\n",
+      "76 km WNW of La Ligua, Chile\n",
+      "9 km W of Freedom, Idaho\n",
+      "15 km W of Freedom, Idaho\n",
+      "11 km ENE of Pāhala, Hawaii\n",
+      "60 km SSW of Nueva Concepción, Guatemala\n",
+      "Rat Islands, Aleutian Islands, Alaska\n",
+      "Rat Islands, Aleutian Islands, Alaska\n",
+      "177 km N of Tobelo, Indonesia\n",
+      "9 km N of Miyako, Japan\n",
+      "59 km WSW of San Pedro de Atacama, Chile\n",
+      "186 km WSW of Adak, Alaska\n",
+      "central East Pacific Rise\n",
+      "19 km W of Susitna, Alaska\n",
+      "6 km NW of Kışlak, Turkey\n",
+      "39 km SE of Perryville, Alaska\n",
+      "32 km S of Tallaboa, Puerto Rico\n",
+      "73 km SSE of Kokhanok, Alaska\n",
+      "61 km WNW of San Antonio de los Cobres, Argentina\n",
+      "89 km WNW of Murghob, Tajikistan\n",
+      "151 km WSW of San Antonio, Chile\n",
+      "northern East Pacific Rise\n",
+      "----------------------------------------\n",
+      "52 km NNW of Sandy Ground Village, Anguilla\n",
+      "64 km NE of Calama, Chile\n",
+      "Turkey-Syria border region\n",
+      "163 km WNW of Panguna, Papua New Guinea\n",
+      "23 km SSE of Pihuamo, Mexico\n",
+      "29 km ENE of Kandrian, Papua New Guinea\n",
+      "80 km SW of Atocha, Bolivia\n",
+      "Pakistan\n",
+      "76 km WNW of La Ligua, Chile\n",
+      "60 km SSW of Nueva Concepción, Guatemala\n",
+      "177 km N of Tobelo, Indonesia\n",
+      "9 km N of Miyako, Japan\n",
+      "186 km WSW of Adak, Alaska\n",
+      "central East Pacific Rise\n",
+      "6 km NW of Kışlak, Turkey\n",
+      "61 km WNW of San Antonio de los Cobres, Argentina\n",
+      "89 km WNW of Murghob, Tajikistan\n",
+      "151 km WSW of San Antonio, Chile\n",
+      "northern East Pacific Rise\n",
+      "----------------------------------------\n",
+      "\n",
+      "Events that were felt : \n",
+      "52 km NNW of Sandy Ground Village, Anguilla 37 times.\n",
+      "23 km SSE of Pihuamo, Mexico 6 times.\n",
+      "10 km SE of Otra Banda, Dominican Republic 1 times.\n",
+      "50 km S of Guantánamo, Cuba 1 times.\n",
+      "Pakistan 3 times.\n",
+      "76 km WNW of La Ligua, Chile 1 times.\n",
+      "9 km W of Freedom, Idaho 14 times.\n",
+      "15 km W of Freedom, Idaho 1 times.\n",
+      "177 km N of Tobelo, Indonesia 6 times.\n",
+      "59 km WSW of San Pedro de Atacama, Chile 1 times.\n",
+      "19 km W of Susitna, Alaska 2 times.\n",
+      "6 km NW of Kışlak, Turkey 6 times.\n",
+      "39 km SE of Perryville, Alaska 1 times.\n",
+      "61 km WNW of San Antonio de los Cobres, Argentina 2 times.\n",
+      "151 km WSW of San Antonio, Chile 6 times.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "import json\n",
+    "\n",
+    "def printResults(data):\n",
+    "    \n",
+    "    # use the json module to load the data into a dictionary\n",
+    "    theJSON = json.loads(data)\n",
+    "    #print(f\"theJSON data : {theJSON}\")\n",
+    "    \n",
+    "    # now we can access the contents of the JSON like any other python object\n",
+    "    if \"title\" in theJSON[\"metadata\"]:\n",
+    "        print(f'The Title : {theJSON[\"metadata\"][\"title\"]}')\n",
+    "    \n",
+    "    # output the number of events, plus the magnitude and each event name\n",
+    "    count = theJSON[\"metadata\"][\"count\"]\n",
+    "    print(f'{count} event recorded')\n",
+    "    \n",
+    "    # for each event, print the place where it occurred\n",
+    "    for i in theJSON[\"features\"]:\n",
+    "         print(i[\"properties\"][\"place\"])\n",
+    "    print(\"----\"*10)\n",
+    "   \n",
+    "    # print the events that only have a maginitude greater than 4\n",
+    "    for i in theJSON[\"features\"]:\n",
+    "         if i[\"properties\"][\"mag\"] >= 4.0:\n",
+    "              print(i[\"properties\"][\"place\"])     \n",
+    "    print(\"----\"*10)         \n",
+    "    \n",
+    "    # print only the events where as least 1 person reported feeling something\n",
+    "    print(\"\\nEvents that were felt : \")\n",
+    "    for i in theJSON[\"features\"]:\n",
+    "        feltReport = i[\"properties\"][\"felt\"]\n",
+    "        if feltReport != None:\n",
+    "              if feltReport > 0:\n",
+    "                  print(i[\"properties\"][\"place\"], feltReport, \"times.\")\n",
+    "    \n",
+    "    \n",
+    "def main():\n",
+    "    urlData = \"https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_day.geojson\"\n",
+    "    \n",
+    "    # open the url and read the data\n",
+    "    weburl = urllib.request.urlopen(urlData)\n",
+    "    print(f\"result code : {weburl.getcode()}\")\n",
+    "    # op : result code : 200\n",
+    "    \n",
+    "    if weburl.getcode() == 200:\n",
+    "        data = weburl.read()\n",
+    "        printResults(data)\n",
+    "    else:\n",
+    "        print(f\"Received an error from the server, cannot print results : {weburl.getcode()}\")\n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
