20230224 added Parsing and processing HTML

--- a/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
@@ -201,11 +201,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parsing and processing HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encountered a start tag : html\n",
+      "At line : 2, Position : 0\n",
+      "Attribut : \n",
+      "\tlang = en\n",
+      "Encountered a start tag : head\n",
+      "At line : 3, Position : 0\n",
+      "Encountered a start tag : meta\n",
+      "At line : 4, Position : 4\n",
+      "Attribut : \n",
+      "\tcharset = UTF-8\n",
+      "Encountered a start tag : meta\n",
+      "At line : 5, Position : 4\n",
+      "Attribut : \n",
+      "\thttp-equiv = X-UA-Compatible\n",
+      "\tcontent = IE=edge\n",
+      "Encountered a start tag : meta\n",
+      "At line : 6, Position : 4\n",
+      "Attribut : \n",
+      "\tname = viewport\n",
+      "\tcontent = width=device-width, initial-scale=1.0\n",
+      "Encountered a start tag : title\n",
+      "At line : 7, Position : 4\n",
+      "Encountered text data : Document\n",
+      "At line : 7, Position : 11\n",
+      "Encountered a start tag : body\n",
+      "At line : 9, Position : 0\n",
+      "Encountered a comment :  This is a comment \n",
+      "At line : 10, Position : 4\n",
+      "Encountered a start tag : h1\n",
+      "At line : 11, Position : 4\n",
+      "Encountered text data : HTML Sample File\n",
+      "At line : 11, Position : 8\n",
+      "Encountered a start tag : p\n",
+      "At line : 12, Position : 4\n",
+      "Encountered text data : This is some text\n",
+      "At line : 12, Position : 7\n",
+      "Encountered a start tag : p\n",
+      "At line : 13, Position : 4\n",
+      "Encountered a start tag : a\n",
+      "At line : 13, Position : 7\n",
+      "Attribut : \n",
+      "\thref = /contact\n",
+      "Encountered text data : Contact\n",
+      "At line : 13, Position : 26\n",
+      "Paragraph tags : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from html.parser import HTMLParser\n",
+    "\n",
+    "paragraphs = 0\n",
+    "\n",
+    "class MyHTMLParser(HTMLParser):\n",
+    "    \n",
+    "    def handle_comment(self, data):\n",
+    "        print(f\"Encountered a comment : {data}\")\n",
+    "        pos = self.getpos()\n",
+    "        print(f\"At line : {pos[0]}, Position : {pos[1]}\")\n",
+    "    \n",
+    "    def handle_starttag(self, tag, attrs):\n",
+    "        print(f\"Encountered a start tag : {tag}\")\n",
+    "        pos = self.getpos()\n",
+    "        print(f\"At line : {pos[0]}, Position : {pos[1]}\")\n",
+    "        \n",
+    "        global paragraphs\n",
+    "        if tag == \"p\":\n",
+    "            paragraphs += 1\n",
+    "            \n",
+    "        if len(attrs) > 0:\n",
+    "            print(\"Attribut : \")\n",
+    "            for a in attrs:\n",
+    "                print(f\"\\t{a[0]} = {a[1]}\")\n",
+    "    \n",
+    "    def handle_data(self, data):\n",
+    "        if data.isspace():\n",
+    "            return\n",
+    "        \n",
+    "        print(f\"Encountered text data : {data}\")\n",
+    "        pos = self.getpos()\n",
+    "        print(f\"At line : {pos[0]}, Position : {pos[1]}\")\n",
+    "    \n",
+    "def main():\n",
+    "    \n",
+    "    # instantiate the parser and feed it some HTML\n",
+    "    parser = MyHTMLParser()\n",
+    "    \n",
+    "    f = open(\"sampleHTML.html\")\n",
+    "    if f.mode == \"r\":\n",
+    "        contents = f.read() # read the entire file\n",
+    "        parser.feed(contents)\n",
+    "        \n",
+    "    print(f\"Paragraph tags : {paragraphs}\")\n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Manipulating XML"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \n",
+    "    # use the parse() function to load and parse an XML file\n",
+    "    \n",
+    "    \n",
+    "    # print out the document node and the name of the first child tag\n",
+    "    \n",
+    "    \n",
+    "    # get the list of XML tags from the document and print each one\n",
+    "    \n",
+    "    \n",
+    "    # create a new XML tag and add it into the document\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
