20230224 added Manipulating XML

--- a/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
+++ b/Notes/04 LinkedIn Learning Python/Ch4 Internet Data Formats.ipynb
@@ -323,30 +323,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node name : #document\n",
+      "First child tag name : person\n",
+      "4 skills are listed.\n",
+      "JavaScript\n",
+      "Python\n",
+      "C#\n",
+      "HTML\n",
+      "5 skills are listed.\n",
+      "JavaScript\n",
+      "Python\n",
+      "C#\n",
+      "HTML\n",
+      "jQuery\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "import xml.dom.minidom\n",
     "\n",
     "def main():\n",
     "    \n",
     "    # use the parse() function to load and parse an XML file\n",
-    "    \n",
+    "    doc = xml.dom.minidom.parse(\"sampleXML.xml\")\n",
     "    \n",
     "    # print out the document node and the name of the first child tag\n",
-    "    \n",
+    "    print(f\"Node name : {doc.nodeName}\")\n",
+    "    print(f\"First child tag name : {doc.firstChild.tagName}\")\n",
     "    \n",
     "    # get the list of XML tags from the document and print each one\n",
-    "    \n",
-    "    \n",
+    "    skills = doc.getElementsByTagName(\"skill\")\n",
+    "    print(f\"{skills.length} skills are listed.\")\n",
+    "    for skill in skills:\n",
+    "        print(f\"{skill.getAttribute('name')}\")\n",
+    "              \n",
     "    # create a new XML tag and add it into the document\n",
+    "    newSkill = doc.createElement(\"skill\")\n",
+    "    newSkill.setAttribute(\"name\", \"jQuery\")\n",
+    "    doc.firstChild.appendChild(newSkill)\n",
     "    \n",
+    "    skills = doc.getElementsByTagName(\"skill\")\n",
+    "    print(f\"{skills.length} skills are listed.\")\n",
+    "    for skill in skills:\n",
+    "        print(f\"{skill.getAttribute('name')}\")\n",
     "    \n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
