20230320 added Notes KBC

--- a/Notes/Notes1.ipynb
+++ b/Notes/Notes1.ipynb
@@ -89,6 +89,26 @@
     "Night is from sunset to sunrise, so from 8:01 PM until 5:59 AM.\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KBC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Create a program capable of displaying questions to the user like KBC.\n",
+    "Use list data type to store the questions and theri correct answers.\n",
+    "Display the final amount the person is taking home after playing the game.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
