--- a/Notes/Notes1.ipynb
+++ b/Notes/Notes1.ipynb
@@ -109,6 +109,69 @@
     "Display the final amount the person is taking home after playing the game.\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n==0 or n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n-1)\n",
+    "    \n",
+    "print(factorial(3))\n",
+    "print(factorial(4))\n",
+    "print(factorial(5))\n",
+    "print(factorial(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a program to print the Fibonacci sequence.\n",
+    "# f(0) = 0\n",
+    "# f(1) = 1\n",
+    "# f(2) = f(1) + f(0)\n",
+    "# f(n) = f(n-1) + f(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
