Function and Decorator
Function and Decorator

--- a/Notes/01_Python/Python_Basic_Concepts/Python_Basic_Concepts.ipynb
+++ b/Notes/01_Python/Python_Basic_Concepts/Python_Basic_Concepts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "edebaa4d",
+   "id": "3fcaa372",
    "metadata": {},
    "source": [
     "# Python Course Introduction: Assignment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ce63b4",
+   "id": "006ba90a",
    "metadata": {},
    "source": [
     "1. What is Python?\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343b872e",
+   "id": "f558efce",
    "metadata": {},
    "source": [
     "6. What are Python Decorators?\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8baca1a1",
+   "id": "be8694d8",
    "metadata": {},
    "source": [
     "7. Explain the concept of Python Generators.\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5283c5a6",
+   "id": "54f91598",
    "metadata": {},
    "source": [
     "8. Write a Python function to check if a given number is prime.\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e37c14",
+   "id": "7854a2e9",
    "metadata": {},
    "source": [
     "9. What is the difference between list and tuple in Python?\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332cdfee",
+   "id": "a61a9ed6",
    "metadata": {},
    "source": [
     "10. Explain the use of 'self' in Python classes.\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0f4e1ea9",
+   "id": "a5f61c66",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f58bf411",
+   "id": "2ca860ec",
    "metadata": {},
    "source": [
     "11. What is a Python virtual environment? How is it created?\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "544ea3ea",
+   "id": "30623761",
    "metadata": {},
    "source": [
     "12. Write a Python code snippet to reverse a string.\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5228210b",
+   "id": "1fd879ef",
    "metadata": {},
    "source": [
     "13. Explain the purpose of PEP 8 in Python.\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e130020",
+   "id": "a9b99d0d",
    "metadata": {},
    "source": [
     "14. What is the output of the following code snippet: print('Python'[-3:])?\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f2452fd4",
+   "id": "040cbfc7",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8263447a",
+   "id": "54b88e7e",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "567224fa",
+   "id": "868f124e",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6247b642",
+   "id": "e084c050",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435ba680",
+   "id": "a2ef4e67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,14 +361,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab599e8",
+   "id": "86a83755",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5d956363",
+   "id": "2fbf481e",
    "metadata": {},
    "source": [
     "# if elif and else "
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3942ee",
+   "id": "69b04c2f",
    "metadata": {},
    "source": [
     "### 1. Can we start from `elif` ?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2905b217",
+   "id": "f195883f",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0057e5",
+   "id": "a1581c86",
    "metadata": {},
    "source": [
     "# Problem Statement: Shipping Cost Calculator\n",
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fbd51012",
+   "id": "8ed509ba",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bad3df",
+   "id": "f1f40563",
    "metadata": {},
    "source": [
     "# ATM function"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ff47c13",
+   "id": "8c07a4f9",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95540ec4",
+   "id": "a4f5c2b4",
    "metadata": {},
    "source": [
     "# Break and Continue"
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3957af08",
+   "id": "d154f706",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf814a6e",
+   "id": "74bf9d48",
    "metadata": {},
    "source": [
     "# fibonacci"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a272c7fd",
+   "id": "3d7b2c78",
    "metadata": {},
    "outputs": [
     {
@@ -633,17 +633,262 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34838df1",
+   "cell_type": "markdown",
+   "id": "15e82972",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Function\n",
+    "\n",
+    "In computer programming, a function is a named section of a code that perform a spesific task. This typically involves taking some input, manipulating it and retuning an output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0c527720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number : 5\n",
+      "5 is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_even_odd(number):\n",
+    "    if number % 2 == 0:\n",
+    "        return f\"{number} is even\"\n",
+    "    else:\n",
+    "        return f\"{number} is odd\"\n",
+    "number = int(input(\"Enter number : \"))\n",
+    "result = check_even_odd(number)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "09512713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter 1st number : 2\n",
+      "Enter 2nd number : 4\n",
+      "Enter 3rd number : 7\n",
+      "The maximum value of 2, 4, and 7 is 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_max(a, b, c):\n",
+    "    if a >= b and a >= c:\n",
+    "        return a\n",
+    "    elif b >= a and b >= c:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return c\n",
+    "a = int(input(\"Enter 1st number : \"))\n",
+    "b = int(input(\"Enter 2nd number : \"))\n",
+    "c = int(input(\"Enter 3rd number : \"))\n",
+    "max_value = find_max(a, b, c)\n",
+    "print(f\"The maximum value of {a}, {b}, and {c} is {max_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a82c7c",
+   "metadata": {},
+   "source": [
+    "# Nested functions\n",
+    "\n",
+    "Nested (or inner, nested) functions are functions that we define inside other functions to directly access the variables and names defined in the enclosing function. Nested functions have many uses, primarily for creating closures and decorators.\n",
+    "\n",
+    "[Link](https://www.analyticsvidhya.com/blog/2021/08/how-nested-functions-are-used-in-python/#:~:text=Nested%20(or%20inner%2C%20nested),for%20creating%20closures%20and%20decorators.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3e005072",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n",
+      "The sum of the digits of the factorial is 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial_and_sum_of_digits(n):\n",
+    "    \n",
+    "    def inner_factorial(x):\n",
+    "        if x == 0 or x == 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return x * inner_factorial(x - 1)\n",
+    "    \n",
+    "    def sum_of_digits(number):\n",
+    "        \n",
+    "        def inner_sum(num):\n",
+    "            if num == 0:\n",
+    "                return 0\n",
+    "            else:\n",
+    "                return num % 10 + inner_sum(num // 10)\n",
+    "        \n",
+    "        return inner_sum(number)\n",
+    "    \n",
+    "    fact = inner_factorial(n)\n",
+    "    sum_digits = sum_of_digits(fact)\n",
+    "    \n",
+    "    return fact, sum_digits\n",
+    "number = 5\n",
+    "factorial_result, sum_of_digits_result = factorial_and_sum_of_digits(number)\n",
+    "print(f\"The factorial of {number} is {factorial_result}\")\n",
+    "print(f\"The sum of the digits of the factorial is {sum_of_digits_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2a09563",
+   "metadata": {},
+   "source": [
+    "# Decorator\n",
+    "\n",
+    "A decorator is a design pattern in Python that allows a user to add new functionality to an existing object without modifying its structure. Decorators are typically applied to functions, and they play a crucial role in enhancing or modifying the behavior of functions.\n",
+    "\n",
+    "ex. : @data_class\n",
+    "\n",
+    "### Higher Order Function\n",
+    "\n",
+    "A function is called Higher Order Function if it contains other functions as a parameter or returns a function as an output i.e, the functions that operate with another function are known as Higher order Functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7585daf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something before function call\n",
+      "Hello !\n",
+      "Something after function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_decorator(func):\n",
+    "    \n",
+    "    def wrapper():\n",
+    "        print(\"Something before function call\")\n",
+    "        \n",
+    "        func()\n",
+    "        \n",
+    "        print(\"Something after function call\")\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def say_hello():\n",
+    "    print(\"Hello !\")\n",
+    "    \n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e3ff8098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "I am Kiran Krushnakant Mungekar.\n",
+      "**************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_stars(func):\n",
+    "    \n",
+    "    def wrapper():\n",
+    "        print(\"*\" * 50)\n",
+    "        \n",
+    "        func()\n",
+    "        \n",
+    "        print(\"*\" * 50)\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@add_stars\n",
+    "def say_hello():\n",
+    "    print(\"I am Kiran Krushnakant Mungekar.\")\n",
+    "    \n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a2f540a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "I am Kiran Krushnakant Mungekar.\n",
+      "**************************************************\n",
+      "Execution finished. Tame taken : 1.0145 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "def calculate_time(func):\n",
+    "    \n",
+    "    def wrapper():\n",
+    "        start_time = time.time()\n",
+    "        print(\"*\" * 50)\n",
+    "        \n",
+    "        time.sleep(1)\n",
+    "        func()\n",
+    "        \n",
+    "        print(\"*\" * 50)\n",
+    "        end_time = time.time()\n",
+    "        \n",
+    "        print(f\"Execution finished. Tame taken : {end_time - start_time:.4f} seconds.\")\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@calculate_time\n",
+    "def say_hello():\n",
+    "    print(\"I am Kiran Krushnakant Mungekar.\")\n",
+    "    \n",
+    "say_hello()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765eea55",
+   "id": "5f2c29ca",
    "metadata": {},
    "outputs": [],
    "source": []
